syntax="proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace="CurrencyApi";

package currency_api;

service GetCurrency {
  rpc GetCurrency (Code) returns (CurrencyDTO);
  rpc GetCurrencyOnDate (CodeAndDate) returns (CurrencyDTO);
  rpc GetSettings (google.protobuf.Empty) returns (Settings);
}

message Settings {
  string base_currency=1;
  bool new_requests_available=2;
}

message Code {
  CurrencyTypeDTO CurrencyType=1;
}
message CodeAndDate {
  CurrencyTypeDTO CurrencyType=1;
  google.protobuf.Timestamp date=2;
}

message CurrencyDTO {
  CurrencyTypeDTO CurrencyType=1;
  string value=2;
}

enum CurrencyTypeDTO {
  USD=0;
  RUB=1;
  KZT=2;
}